--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
   </head>
 
   <body>
-
+    <nav class="navbar navbar-default navbar-static-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Legal Reader</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="../navbar/">About</a></li>
+            <li class="active"><a href="./">Example<span class="sr-only">(current)</span></a></li>
+            <li><a href="../navbar-fixed-top/">How to use</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
     <div class="container">
 
       <form class="form-signup" role="form">
@@ -53,16 +72,6 @@
     </div> <!-- /container -->
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/marked.min.js"></script>
-    <script type="text/javascript" src="js/legal-reader.js"></script>
-    <script>
-      $(document).ready(function() {
-        $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
-          // only need to pass the html file
-          $('#legal-reader').legalreader(marked(responseText)); 
-        }); 
-      });
-    </script>
 
 
   </body>
