--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">About</a></li>
-            <li class="active"><a href="./">Example<span class="sr-only">(current)</span></a></li>
-            <li><a href="../navbar-fixed-top/">How to use</a></li>
+            <li><a href="about.html">About</a></li>
+            <li class="active"><a href="example.html">Example<span class="sr-only">(current)</span></a></li>
+            <li><a href="how-to-use.html">How to use</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -72,7 +72,7 @@
     </div> <!-- /container -->
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
-
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 
   </body>
 </html>
