Editing overview of landing page

--- a/example.html
+++ b/example.html
@@ -39,23 +39,35 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <div class="jumbotron">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h2>No more skipping <br>to read legal document</h2><br><br>
-            <p>Carrot cake tart gummi bears gummi bears fruitcake chocolate cake danish chocolate bar. Candy bear claw sweet roll danish sesame snaps sugar plum apple pie. Oat cake wafer liquorice cotton candy applicake. Ice cream tart topping cookie I love.</p><br><br>
-            <p><a class="btn btn-primary btn-download" href="#" role="button">Download v0.1</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
-          </div>
-          <div class="col-md-6"></div>
-        </div>
-        
-      </div>
-    </div>
-    <!-- Container -->
     <div class="container">
 
-      
+      <form class="form-signup" role="form">
+        <h2 class="form-signup-heading">Sign up here.</h2>
+        <div class="form-group">
+          <label for="inputFirstName">First Name</label>
+          <input type="text" id="inputFirstName" class="form-control" required autofocus>
+        </div>
+
+        <div class="form-group">
+          <label for="inputLastName">Last Name</label>
+          <input type="text" id="inputLastName" class="form-control" required>
+        </div>
+
+        <div class="form-group">
+          <label for="inputFirstName">Email</label>
+          <input type="email" id="inputEmail" class="form-control" required>
+        </div>
+
+        <div class="form-group">
+          <label for="inputPassword">Password</label>
+          <input type="password" id="inputPassword" class="form-control" required>
+        </div>
+
+        <div id="legal-reader" class="input-wrapper"></div>
+        <div class="input-wrapper">
+          <input class="signmeup" type="submit" value="Okay, I'm good to go!">
+        </div>
+      </form>
 
     </div> <!-- /container -->
 
