--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="css/form.css" rel="stylesheet">
     <link href="css/legal-reader.css" rel="stylesheet">
+    <link href="css/prism.css" rel="stylesheet">
   </head>
 
   <body>
@@ -47,19 +48,23 @@
         <div class="row">
           <!-- Left -->
           <div class="col-md-6">
-            <p>Carrot cake tart gummi bears gummi bears fruitcake chocolate cake danish chocolate bar. Candy bear claw sweet roll danish sesame snaps sugar plum apple pie. Oat cake wafer liquorice cotton candy applicake. Ice cream tart topping cookie I love.</p><br><br>
-            <p><a class="btn btn-primary btn-download" href="#" role="button">Download v0.1</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
+            <p>Convert your boring-flat-long legal document into more user friendly format and ensure your service's user reads your legal document, e.g. Terms and Conditions, Software License, Privacy Policy, etc.</p>
+            <br><br>
+            <p><a class="btn btn-primary btn-download" href="#" role="button">Download v1.0</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
           </div>
 
           <!-- Right -->
           <div class="col-md-6">
             <pre>
+<code class="language-javascript">
 $(document).ready(function() {
   $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
     // only need to pass the html file
     $('#legal-reader').legalreader(marked(responseText)); 
   }); 
-});</pre>
+});
+</code>
+            </pre>
           </div>
         </div>
         
@@ -69,6 +74,6 @@ $(document).ready(function() {
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-
+    <script type="text/javascript" src="js/prism.js"></script>
   </body>
 </html>
