--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
     <div class="jumbotron">
       <div class="container">
         <div class="row">
-          <h2>No more skipping <br>to read legal document</h2><br><br>
+          <div class="col-md-12">
+            <h2>No more skipping <br>to read legal document</h2><br><br>
+          </div>
         </div>
         <div class="row">
           <!-- Left -->
-          <div class="col-md-6">
-            <p>Carrot cake tart gummi bears gummi bears fruitcake chocolate cake danish chocolate bar. Candy bear claw sweet roll danish sesame snaps sugar plum apple pie. Oat cake wafer liquorice cotton candy applicake. Ice cream tart topping cookie I love.</p><br><br>
+          <div class="col-md-6 overview">
+            <p><strong>Legal</strong>Reader is a </p><br><br>
             <p><a class="btn btn-primary btn-download" href="#" role="button">Download v0.1</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
           </div>
 
