Adding links for 2nd example

--- a/example.html
+++ b/example.html
@@ -79,6 +79,12 @@
         <!-- Outside Form -->
         <div class="col-md-6 col-xs-12">
           <h4>2. On the links</h4><br><br>
+          <ul class="nav nav-pills">
+            <li role="presentation" id="privacy"><a href="#">Privacy</a></li>
+            <li role="presentation" id="cookies"><a href="#">Cookies</a></li>
+            <li role="presentation" id="tos"><a href="#">Terms of Service</a></li>
+            <li role="presentation" id="user"><a href="#">User Policy</a></li>
+          </ul>
         </div>
       </div>
 
