Add documentation page

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/bepitulaz/legal-reader">Source Code</a></li>
+            <li><a href="docs.html">Docs</a></li>
             <li><a href="example.html">Examples</a></li>
             <li><a href="about.html">The Creators</a></li>
           </ul>
