Bug fixing on UI

--- a/example.html
+++ b/example.html
@@ -107,6 +107,7 @@
         });    
       });
     </script>
+    <!--
     <script type="text/javascript">
       $(document).ready(function() {
         var url = window.location.protocol + "//" + window.location.host;
@@ -117,6 +118,6 @@
           });  
         });    
       });
-    </script>
+    </script> -->
   </body>
 </html>
