--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="row">
           <!-- Left -->
           <div class="col-md-6">
-            <p>Convert your boring-flat-long legal document into more user friendly format and ensure your service's user reads your legal document, e.g. Terms and Conditions, Software License, Privacy Policy, etc.</p>
+            <p>Convert your boring-flat-long legal document into more user-friendly format and ensure your service's user reads your legal document, e.g. Terms and Conditions, Software License, Privacy Policy, etc.</p>
             <br><br>
             <p><a class="btn btn-primary btn-download" href="#" role="button">Download v1.0</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
           </div>
