--- a/example.html
+++ b/example.html
@@ -107,7 +107,7 @@
         });    
       });
     </script>
-    <!--
+    
     <script type="text/javascript">
       $(document).ready(function() {
         var url = window.location.protocol + "//" + window.location.host;
@@ -118,6 +118,6 @@
           });  
         });    
       });
-    </script> -->
+    </script> 
   </body>
 </html>
