Bugs fixing again

--- a/example.html
+++ b/example.html
@@ -42,7 +42,9 @@
     </nav>
     <div class="container example">
       <div class="row">
-        Carrot cake tart gummi bears gummi bears fruitcake chocolate cake danish chocolate bar. Candy bear claw sweet roll danish sesame snaps sugar plum apple pie. Oat cake wafer liquorice cotton candy applicake. Ice cream tart topping cookie I love.Chocolate bar candy canes cotton candy bear claw gingerbread. Croissant pudding I love toffee liquorice oat cake I love jujubes I love. Gingerbread dragée candy danish jelly.
+        <div class="col-md-12">
+          Carrot cake tart gummi bears gummi bears fruitcake chocolate cake danish chocolate bar. Candy bear claw sweet roll danish sesame snaps sugar plum apple pie. Oat cake wafer liquorice cotton candy applicake. Ice cream tart topping cookie I love.Chocolate bar candy canes cotton candy bear claw gingerbread. Croissant pudding I love toffee liquorice oat cake I love jujubes I love. Gingerbread dragée candy danish jelly.
+        </div>
       </div>
       <div class="row">
         <!-- Inside form -->
