Editing landing page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
       </div>
     </div> <!-- Jumbotron -->
 
-    <div class="container">
+    <div class="container start">
       <div class="row">
         <div class="col-md-4">
           <h4>1. Write in Markdown</h4>
