Fixing link style on footer

--- a/example.html
+++ b/example.html
@@ -98,7 +98,7 @@
     </div> <!-- /container -->
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">© Copyright 2014 <a href="http://asep.co">Asep Bagja P</a> | Website design by <a href="http://retno.co">Retno Ika S</a> | Released under <a href="" id="license">MIT License</a></p>
+        <p class="text-muted">© Copyright 2014 <a href="http://asep.co" target="_blank">Asep Bagja P</a> | Website design by <a href="http://retno.co" target="_blank">Retno Ika S</a> | Released under <a href="" id="license">MIT License</a></p>
       </div>
     </footer>
 
