--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
           <p>Some nice guys on earth have written cool javascript markdown parser to convert your markdown document into html. You can use our favourite parser too. <a href="">Please tell me.</a> 
         </div>
         <div class="col-md-4">
-          <h4>3. Let LegalReader Work</h4>
+          <h4>3. Let <strong>Legal</strong>Reader Work</h4>
           <p>The fun starts here. Write one line of code to activate the plugin, then your user will enjoy to read your legal document. <a href="">Cool! Show me the magic!</a></p>
         </div>
       </div>
@@ -94,7 +94,7 @@ $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
     <!-- Container -->
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">© Copyright 2014 <a href="http://asep.co">Asep Bagja P</a> | Website design by <a href="http://retno.co">Retno Ika S</a> | Released under <a href="" id="license">MIT License</a></p>
+        <p class="text-muted">© Copyright 2014 <a href="http://asep.co" target="_blank">Asep Bagja P</a> | Website design by <a href="http://retno.co" target="_blank">Retno Ika S</a> | Released under <a href="" id="license">MIT License</a></p>
       </div>
     </footer>
 
