Writing the usage documentation

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>ToS Hack - Sign Up</title>
+    <title>Legal Reader 1.0 | About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
