--- a/example.html
+++ b/example.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Legal Reader 0.1 | Example</title>
+    <title>Legal Reader 0.1 | Usage Example</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
