--- a/docs.html
+++ b/docs.html
@@ -56,7 +56,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-9 col-md-10 main">
+      <div class="col-sm-9 col-md-8 col-md-offset-2 main">
         <h3 id="write-markdown">1. Write Your Legal Document in Markdown Format</h3>
         <p>We use markdown because it is writer friendly and also programmer friendly. You must follow LegalReader conventions when writing your legal document. Don't worry it is not a rocket science.</p>
         <p>You only need to give <code>###</code> to highlight your point. See the example below.</p>
