linking all the links on index and archiving the plugin

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <!-- Left -->
           <div class="col-md-6">
             <p>Convert your boring-flat-long legal document into more user-friendly format and ensure your service's user reads your legal document, e.g. Terms and Conditions, Software License, Privacy Policy, etc.</p>
-            <br><br>
-            <p><a class="btn btn-primary btn-download" href="#" role="button">Download v1.0</a><a class="btn btn-link btn-start" href="#" role="button">Get started</a></p>
+            <p>LegalReader is a jQuery plugin.</p>
+            <p><a class="btn btn-primary btn-download" href="/download/legalreader-1.0.zip" role="button">Download v1.0</a><a class="btn btn-link btn-start" href="#get-started" role="button">Get started</a></p>
           </div>
 
           <!-- Right -->
@@ -75,19 +75,19 @@ $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
       </div>
     </div> <!-- Jumbotron -->
 
-    <div class="container start">
+    <div id="get-started" class="container start">
       <div class="row">
         <div class="col-md-4">
           <h4>1. Write in Markdown</h4>
-          <p>Write your legal document in markdown format and follow our writing conventions, so Legal Reader can process your document. <a href="">Read the conventions.</a></p>
+          <p>Write your legal document in markdown format and follow our writing conventions, so Legal Reader can process your document. <a href="docs.html#write-markdown">Read the conventions.</a></p>
         </div>
         <div class="col-md-4">
           <h4>2. Pick your Markdown Parser</h4>
-          <p>Some nice guys on earth have written cool javascript markdown parser to convert your markdown document into html. You can use our favourite parser too. <a href="">Please tell me.</a> 
+          <p>Some nice guys on earth have written cool javascript markdown parser to convert your markdown document into html. You can use our favourite parser too. <a href="docs.html#pick-parser">Please tell me.</a> 
         </div>
         <div class="col-md-4">
           <h4>3. Let <strong>Legal</strong>Reader Work</h4>
-          <p>The fun starts here. Write one line of code to activate the plugin, then your user will enjoy to read your legal document. <a href="">Cool! Show me the magic!</a></p>
+          <p>The fun starts here. Write one line of code to activate the plugin, then your user will enjoy to read your legal document. <a href="docs.html#let-work">Cool! Show me the magic!</a></p>
         </div>
       </div>
     </div>
