--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ $.get("http://localhost:3000/legal-file/tos.md", function(responseText) {
     <script type="text/javascript" src="js/legal-reader.js"></script>
     <script type="text/javascript">
       $(document).ready(function() {
-        var url = window.location.protocol + "//" + window.location.host;
+        var url = window.location.protocol + "//" + window.location.host + "/legal-reader";
         $.get(url + "/LICENSE", function(responseText) {
           var parsedFile = marked(responseText);
           $("#license").legalreader(parsedFile, {
